RAP-35 Corrected logic to generate delta for extension + Address SonarQube feedback